--- a/src/scss/components/_navbar.scss
+++ b/src/scss/components/_navbar.scss
@@ -29,8 +29,6 @@
 
 
 .logo-container {
-    width: 15rem;
-    min-width: 15rem;
 
     @include mq(med) {
         margin: 1rem 0;
@@ -42,7 +40,7 @@
 }
 
 .logo {
-    @include flex($just: center, $align: center);
+    @include flex($align: center);
     font-size: 1.9rem;
     height: 100%;
     width: 100%;
